--- a/Masai_Mart/wishlist.html
+++ b/Masai_Mart/wishlist.html
@@ -1,38 +1,42 @@
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wishlist</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="media.css" />
     <style>
-        #product-container {
-        padding-top:10rem;
-    }
+      #product-container {
+        padding-top: 10rem;
+      }
     </style>
-    
-</head>
-<body>
+  </head>
+  <body>
     <!-- Navbar -->
     <div class="navbar">
-        <div class="logo-container">
-            <img src="https://notion-emojis.s3-us-west-2.amazonaws.com/prod/svg-twitter/1f6cd-fe0f.svg" alt="" id="masai-mart">
-            <div class="branding">MASAI MART</div>
-        </div>
-        <div class="nav-links-container">
-            <a href="#">Home</a>
-            <a href="index.html">Products</a>
-            <a href="wishlist.html">Wishlist</a>
-        </div>
+      <div class="logo-container">
+        <img
+          src="https://notion-emojis.s3-us-west-2.amazonaws.com/prod/svg-twitter/1f6cd-fe0f.svg"
+          alt="masai-mart"
+          id="masai-mart"
+        />
+        <div class="branding">MASAI MART</div>
+      </div>
 
+      <div class="nav-links-container">
+        <a href="index.html">Home</a>
+        <a href="index.html">Products</a>
+        <a href="wishlist.html">Wishlist</a>
+      </div>
     </div>
-    <!-- Navbar end -->
+    <!-- Navbar Ends -->
 
     <!-- Product Container -->
     <div id="product-container"></div>
-    
-</body>
+  </body>
 </html>
+
 <script src="wishlist.js"></script>
