--- a/HTML/index.html
+++ b/HTML/index.html
@@ -5,8 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        a{
+            text-decoration: none;
+        }
+    </style>
 </head>
-<body>
-    
+<br>
+    <h1>Hel</h1>
+    <br>
+    <h2>he</h2>
+    <a href="www.google.com">hello</a>
+</br>
+<h1>hi</h1>
 </body>
 </html>
