--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,7 +8,25 @@
     <style>
         a{
             text-decoration: none;
+            
         }
+        .first{
+width:400px;
+height:400px;
+background:red;
+position:relative;
+}
+.second{
+width:200px;
+height: 200px; background:blue;
+position:relative;
+}
+.third{
+width:300px;
+height:300px;
+background:green;
+position:relative;
+}
     </style>
 </head>
 <br>
@@ -16,7 +34,15 @@
     <br>
     <h2>he</h2>
     <a href="www.google.com">hello</a>
+
 </br>
+<div class='first'>
+    FIRST
+    <div class='second'>SECOND</div>
+    </div>
+    <div class='third'>
+    THIRD
+    </div>
 <h1>hi</h1>
 </body>
 </html>
