--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,45 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Debouncing</title>
     <style>
-        a{
-            text-decoration: none;
-            
-        }
-        .first{
-width:400px;
-height:400px;
-background:red;
-position:relative;
-}
-.second{
-width:200px;
-height: 200px; background:blue;
-position:relative;
-}
-.third{
-width:300px;
-height:300px;
-background:green;
-position:relative;
-}
+
     </style>
 </head>
-<br>
-    <h1>Hel</h1>
-    <br>
-    <h2>he</h2>
-    <a href="www.google.com">hello</a>
-
-</br>
-<div class='first'>
-    FIRST
-    <div class='second'>SECOND</div>
-    </div>
-    <div class='third'>
-    THIRD
-    </div>
-<h1>hi</h1>
+<body>
+   <input type="text" id="search" > 
 </body>
 </html>
+<script>
+    let s= document.getElementById("search")
+
+    s.onkeypress = debounce
+    let count=0;
+    function debounce(){
+        console.log("hello",count++)
+    }
+</script>
