--- a/JAVA_SCRIPT/Debouncing/index.html
+++ b/JAVA_SCRIPT/Debouncing/index.html
@@ -5,20 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Debouncing</title>
-    <style>
-
-    </style>
 </head>
 <body>
-   <input type="text" id="search" > 
+    <input type="text" placeholder="Search" id="search">
 </body>
 </html>
 <script>
-    let s= document.getElementById("search")
+    let s=document.getElementById("search")
 
-    s.onkeypress = debounce
+    s.onkeypress =wrapper
+
     let count=0;
+    let timer;
+    function wrapper(){
+        clearInterval(timer)
+   timer=setTimeout(debounce,3000)
+
+  
+    }
+
     function debounce(){
-        console.log("hello",count++)
+        console.log("call",count++)
     }
 </script>
+
