--- a/HTML/Counter/index.html
+++ b/HTML/Counter/index.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Counter</title>
+    <style>
+        .container{
+            /* display:flex; */
+            margin:auto;
+            text-align: center;
+        }
+        .counter{
+            font-size: 60px;
+            color:blue;
+            margin: 10px 0px;
+        }
+
+    </style>
 </head>
 <body>
-    
+    <div class="container">
+    <h1>Counter</h1>
+    <span class="counter">0</span>
+    <div class="btn-container">
+        <button id="inc" onClick="changeCounter(inc)">INCREASE</button>
+        <button id="dec" onClick="changeCounter(dec)">DECREASE</button>
+        <button id="reset" onClick="changeCounter(reset)">RESET</button>
+
+    </div>
+   
+</div>
 </body>
 </html>
+<script >
+let counter=document.querySelector('.counter')
+let count=0;
+function changeCounter(button){
+    if(button==inc){
+        count+=1;
+    }
+    else if(button==dec){
+        if(count>0){
+            count=count-1;
+        }
+        
+    }
+    else if(button==reset){
+        count=0;
+    }
+    counter.innerText=count;
+}
+</script>
