--- a/HTML/Mediaquery/index.html
+++ b/HTML/Mediaquery/index.html
@@ -6,16 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        #container{
+            display:grid;
+            grid-template-columns: repeat(4,1fr);
+            grid-template-rows: repeat(2,auto);
+            gap:20px;
+        }
+        #container>div{
+            
+            height:300px;
+            width:300px;
+            border:1px solid blue;
+        }
+       
+        @media all and (min-width:380px) and (max-width:700px){
+            #container{
+                display:grid;
+            grid-template-columns: repeat(2,1fr);
+            grid-template-rows: repeat(4,auto);
+            gap:20px; 
 
+            }
+        }
+        @media all and (max-width:379px) {
+            #container{
+                display:grid;
+            grid-template-columns: repeat(1,1fr);
+            grid-template-rows: repeat(8,auto);
+            gap:20px;  
+
+            }
+        }
     </style>
 </head>
 <body>
-    <div></div>
+    <div id="container">
     <div>A</div>
     <div>B</div>
     <div>C</div>
     <div>D</div>
     <div>E</div>
     <div>F</div>
+    <div>g</div>
+    <div>h</div>
+</div>
 </body>
 </html>
