--- a/HTML/promiss.html
+++ b/HTML/promiss.html
@@ -28,6 +28,7 @@ document.body.innerHTML=output
 
 function createData(newData){
     return new Promise((resolve,reject)=>{
+        document.body.innerText="Please Wait data loading";
         setTimeout(()=>{
             details.push(newData);
             let error=false;
