--- a/HTML/check/index.html
+++ b/HTML/check/index.html
@@ -6,37 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .container{
+        #container{
+            width:100%;
+            height:700px;
+            
+        }
+        .box{
             margin:auto;
-        }
-        #g{
-            height:300px;
-            width:300px;
-            border:1px solid red;
-        }
-        #b{
-            height:300px;
-            width:300px;
-            border:1px solid green;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <div class="container">
-        <button id="g" onclick="changeColor(g)">Gray</button>
-        <button id="b" onclick="changeColor(g)">blue</button>
-    </div>
+    <div class="box">
+    <button id="green">Green</button>
+    <button id="blue">Blue</button>
+</div>
+    <div id="container"></div>
 </body>
 </html>
 <script>
-   var btn=document.getElementById("g");
-    function changeColor(btn){
-        if(btn==g){
-            body.style.background="blue";
-        }
-        else{
-            body.style.background="green"
-        }
-        btn.innerText=changeColor()
+    document.getElementById("green").addEventListener("click",()=>{
+        changeGreen()
+    })
+    document.getElementById("blue").addEventListener("click",()=>{
+        changeBlue()
+    })
+    function changeGreen(){
+        document.getElementById("container").style.backgroundColor="green"
+    }
+    function changeBlue(){
+        document.getElementById("container").style.backgroundColor="blue"
+        
     }
 </script>
