--- a/HTML/Mediaquery/index.html
+++ b/HTML/Mediaquery/index.html
@@ -19,24 +19,23 @@
             border:1px solid blue;
         }
        
-        @media all and (min-width:380px) and (max-width:700px){
+        @media all and (max-width:399px){
             #container{
-                display:grid;
-            grid-template-columns: repeat(2,1fr);
-            grid-template-rows: repeat(4,auto);
-            gap:20px; 
-
+                display: grid;
+                grid-template-columns: repeat(1,1fr);
+                grid-template-rows: auto;
+                gap:20px;
             }
         }
-        @media all and (max-width:379px) {
+        @media all and (min-width:400px) and (max-width:700px){
             #container{
-                display:grid;
-            grid-template-columns: repeat(1,1fr);
-            grid-template-rows: repeat(8,auto);
-            gap:20px;  
-
+                display: grid;
+                grid-template-columns: repeat(2,1fr);
+                grid-template-rows: auto;
+                gap:20px;
             }
         }
+       
     </style>
 </head>
 <body>
