--- a/JAVA_SCRIPT/SetInterval&ClearInterval/index.html
+++ b/JAVA_SCRIPT/SetInterval&ClearInterval/index.html
@@ -55,10 +55,11 @@
         clearInterval(timer);
     }
     else{
-        let res=document.getElementById("setinterval");
-   res.style.width=c+"px"
+        let out=document.getElementById("setinterval")
+        out.style.width=c+"px"
     }
    }
 
    
 </script>
+
