--- a/JAVA_SCRIPT/Debouncing/index.html
+++ b/JAVA_SCRIPT/Debouncing/index.html
@@ -28,6 +28,19 @@
 //         console.log("call",count++)
 
 //     }
+// let s=document.getElementById("search")
+// s.onkeypress=wrapper;
+
+// let count=0;
+// let timer;
+// function wrapper(){
+//     clearInterval(timer)
+// timer=setTimeout(debounce,3000);
+// }
+// function debounce(){
+//     console.log("count",count++);
+// }
+
 let s=document.getElementById("search")
 s.onkeypress=wrapper;
 
