--- a/JAVA_SCRIPT/Debouncing/index.html
+++ b/JAVA_SCRIPT/Debouncing/index.html
@@ -41,15 +41,16 @@
 //     console.log("count",count++);
 // }
 
-let s=document.getElementById("search")
+let s=document.getElementById("search");
 s.onkeypress=wrapper;
 
 let count=0;
 let timer;
 function wrapper(){
-    clearInterval(timer)
-timer=setTimeout(debounce,3000);
+   clearInterval(timer) 
+timer=setTimeout(debounce,3000)
 }
+
 function debounce(){
     console.log("count",count++);
 }
