--- a/JAVA_SCRIPT/Throttling/index.html
+++ b/JAVA_SCRIPT/Throttling/index.html
@@ -30,6 +30,25 @@
 //     console.log("call",count++)
 // }
 
+// let s=document.getElementById("search")
+// s.onkeypress=wrapper;
+
+// let count=0;
+// let flag=true;
+// function wrapper(){
+    
+//         if(flag){
+//     throt()
+//     flag=false
+//     setTimeout(()=>{
+//         flag=true;
+//     },2000)
+//     } 
+// }
+
+// function throt(){
+//     console.log("count",count++)
+// }
 let s=document.getElementById("search")
 s.onkeypress=wrapper;
 
