--- a/JAVA_SCRIPT/Debouncing/index.html
+++ b/JAVA_SCRIPT/Debouncing/index.html
@@ -4,55 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Debouncing</title>
+    <title>Document</title>
 </head>
 <body>
-    <input type="text" placeholder="Search" id="search">
+    <input type="text" placeholder="Add Something" id="search">
 </body>
 </html>
+
 <script>
-//     let s=document.getElementById("search")
+    let s= document.getElementById('search')
+    s.onkeypress=wrapper;
+    let count=0;
+    let timer;
 
-//     s.onkeypress =wrapper
+    function wrapper(){
+        clearInterval(timer)
+    timer=setTimeout(debounce,3000)
+    }
 
-//     let count=0;
-//     let timer;
-//     function wrapper(){
-//         clearInterval(timer)
-//    timer=setTimeout(debounce,3000)
+    function debounce(){
+        console.log("count",count++)
+    }
 
-  
-//     }
-
-//     function debounce(){
-//         console.log("call",count++)
-
-//     }
-// let s=document.getElementById("search")
-// s.onkeypress=wrapper;
-
-// let count=0;
-// let timer;
-// function wrapper(){
-//     clearInterval(timer)
-// timer=setTimeout(debounce,3000);
-// }
-// function debounce(){
-//     console.log("count",count++);
-// }
-
-let s=document.getElementById("search");
-s.onkeypress=wrapper;
-
-let count=0;
-let timer;
-function wrapper(){
-   clearInterval(timer) 
-timer=setTimeout(debounce,3000)
-}
-
-function debounce(){
-    console.log("count",count++);
-}
 </script>
-
