--- a/JAVA_SCRIPT/Debouncing/index.html
+++ b/JAVA_SCRIPT/Debouncing/index.html
@@ -12,16 +12,29 @@
 </html>
 
 <script>
-    let s= document.getElementById('search')
+    // let s= document.getElementById('search')
+    // s.onkeypress=wrapper;
+    // let count=0;
+    // let timer;
+
+    // function wrapper(){
+    //     clearInterval(timer)
+    // timer=setTimeout(debounce,3000)
+    // }
+
+    // function debounce(){
+    //     console.log("count",count++)
+    // }
+
+    let s=document.querySelector("#search")
     s.onkeypress=wrapper;
     let count=0;
     let timer;
 
     function wrapper(){
         clearInterval(timer)
-    timer=setTimeout(debounce,3000)
+        timer=setTimeout(debounce,2000)
     }
-
     function debounce(){
         console.log("count",count++)
     }
