--- a/JAVA_SCRIPT/Throttling/index.html
+++ b/JAVA_SCRIPT/Throttling/index.html
@@ -50,21 +50,20 @@
 //     console.log("count",count++)
 // }
 
-
 let s=document.getElementById("search")
 s.onkeypress=wrapper;
 
 let count=0;
-let flag=false;
+let flag=true;
 
 function wrapper(){
-    if(flag){
-        throt()
-        flag=false;
-        setTimeout(()=>{
-            flag=true;
-        },2000)
-    }
+if(flag){
+    throt();
+    flag=false;
+    setTimeout(()=>{
+        flag=true
+    },2000)
+}
 }
 
 function throt(){
