--- a/JAVA_SCRIPT/SetInterval&ClearInterval/index.html
+++ b/JAVA_SCRIPT/SetInterval&ClearInterval/index.html
@@ -46,19 +46,33 @@
     //     }
     // }
    
-   let c=0;
-   let timer=setInterval(Anim,1000)
+//    let c=0;
+//    let timer=setInterval(Anim,1000)
 
-   function Anim(){
-    c+=10;
-    if(c==100){
-        clearInterval(timer);
+//    function Anim(){
+//     c+=10;
+//     if(c==100){
+//         clearInterval(timer);
+//     }
+//     else{
+//         let out=document.getElementById("setinterval")
+//         out.style.width=c+"px"
+//     }
+//    }
+
+let c=0;
+let timer=setInterval(Anim,1000)
+
+function Anim(){
+    c+=10
+    if(c==150){
+        clearInterval(timer)
     }
     else{
-        let out=document.getElementById("setinterval")
-        out.style.width=c+"px"
+        let output=document.getElementById("setinterval")
+        output.style.width=c+"px"
     }
-   }
+}
 
    
 </script>
