--- a/Jobl-list/index.html
+++ b/Jobl-list/index.html
@@ -27,8 +27,7 @@
             type="text"
             name="search-lang"
             id="search-lang"
-            placeholder="Search for language"
-          />
+            placeholder="Search for language" />
         </div>
       </div>
       <div id="pagination"></div>
