--- a/HTML/Fetch/index.html
+++ b/HTML/Fetch/index.html
@@ -47,6 +47,7 @@
 </body>
 </html>
 <script>
+    //Fetching data
     // https://fakestoreapi.com/products
     const getData= async()=>{
         try{
