--- a/Counter All/Js Counter/index.html
+++ b/Counter All/Js Counter/index.html
@@ -13,7 +13,7 @@
     <h2 class="count">0</h2>
   <div class="btns">
     
-    <button id="inc" onClick="changeCount(inc)">Increment</button>
+    <button id="inc" onClick="changeCount(inc)">Incre</button>
     <button id="dec" onClick="changeCount(dec)">Decrement</button>
     <button id="reset" onClick="changeCount(reset)">Reset</button>
 
