--- a/Counter All/Js Counter/index.html
+++ b/Counter All/Js Counter/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,4 +24,28 @@
 </html>
 <script src="index.js"></script>
 
+ -->
 
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="index.css" />
+ </head>
+ <body>
+  <div id="container">
+    <h1>Counter</h1>
+    <h2 class="count">0</h2>
+    <div class="btns">
+      <button id="inc" onClick="changeCount(inc)" >Inc</button>
+      <button id="dec" onClick="changeCount(dec)" >Dec</button>
+      <button id="reset" onClick="changeCount(reset)" >Reset</button>
+    </div>
+  </div>
+  
+ </body>
+ </html>
+ <script src="index.js"></script>
