--- a/HTML/Mediaquery/index.html
+++ b/HTML/Mediaquery/index.html
@@ -17,7 +17,7 @@
             
             height:300px;
             width:300px;
-            border:1px solid red;
+            border:1px solid greenyellow;
         }
         @media all and (min-width:300px) and (max-width:700px){
             #container{
@@ -35,10 +35,10 @@
                 gap:20px
             }
         }
-        h1{
+        /* h1{
             background-color: green;
         }
-       
+        */
     </style>
 
 </head>
