--- a/HTML/box.html
+++ b/HTML/box.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         .f{
-            border: 2px solid red;
+            border: 2px solid blue;
             box-sizing: border-box;
             width:20%;
             margin: auto;
@@ -15,7 +15,7 @@
             font-size: 20px;
         }
         .s{
-            border:2px solid blue;
+            border:2px solid purple;
             width:20%;
             margin: auto;
             padding: 100px;
