--- a/HTML/Mediaquery/index.html
+++ b/HTML/Mediaquery/index.html
@@ -7,12 +7,12 @@
     <title>Document</title>
 
     <style>
-        /* #container{
+        #container{
             display:grid;
             grid-template-columns: repeat(4,1fr);
             grid-template-rows: repeat(2,auto);
             gap:20px;
-        } */
+        }
         #container>div{
             
             height:300px;
