--- a/Counter All/Js Counter/index.html
+++ b/Counter All/Js Counter/index.html
@@ -26,7 +26,7 @@
 
  -->
 
- <!DOCTYPE html>
+ <!-- <!DOCTYPE html>
  <html lang="en">
  <head>
   <meta charset="UTF-8">
@@ -48,4 +48,4 @@
   
  </body>
  </html>
- <script src="index.js"></script>
+ <script src="index.js"></script> -->
