--- a/Counter All/Js Counter/index.html
+++ b/Counter All/Js Counter/index.html
@@ -1,4 +1,5 @@
-<!-- <!DOCTYPE html>
+<!-- All Data -->
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +25,7 @@
 </html>
 <script src="index.js"></script>
 
- -->
+
 
  <!-- <!DOCTYPE html>
  <html lang="en">
