--- a/HTML/Gt/index.html
+++ b/HTML/Gt/index.html
@@ -1,67 +1,132 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Responsive Bootstrap Navbar</title>
-  <!-- Include Bootstrap CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.5.0/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <title>Document</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg" id="myNavbar">
-    <div class="container-fluid" style="border: 2px solid red; display: flex;">
-      <a class="navbar-brand" href="#">Logo</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav" style="display: flex; justify-content: space-between;">
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navList1" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Nav List 1
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navList1">
-              <li><a class="dropdown-item" href="#">Dropdown 1</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 2</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 3</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navList2" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Nav List 2
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navList2">
-              <li><a class="dropdown-item" href="#">Dropdown 1</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 2</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 3</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navList3" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Nav List 3
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navList3">
-              <li><a class="dropdown-item" href="#">Dropdown 1</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 2</a></li>
-              <li><a class="dropdown-item" href="#">Dropdown 3</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Link</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Dropdown
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="#">Action</a>
+            <a class="dropdown-item" href="#">Another action</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">Disabled</a>
+        </li>
+      </ul>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
   </nav>
+  <div class="container">
+    <div class="row">
+        <div class="col-md-12">
 
-  <!-- Include Bootstrap JavaScript and jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.5.0/js/bootstrap.min.js"></script>
-  
-  <script>
-    // JavaScript for color picker logic
-    const colorPicker = document.getElementById('colorPicker');
-    const navbar = document.getElementById('myNavbar');
+            <h1><strong>Message from Managing Director</strong></h1>
+            <br><br>
+            <p>As an organization we are committed to, connected to, and invested in our communities. It is our desire to lead change in the talent management industry by thinking beyond just connecting talent with opportunities. We aim to provide meaningful opportunities for our consultants and clients, in a manner that aligns with our core values. We strongly believe that leadership is a process, not a title. Gramthejus leaders are expected to establish direction, create alignment and build commitment across their teams and with their peers. Everyone at Gramthejus is seen, heard and valued. My team and I deliver this message, clearly and consistently, with the hope that all Gramthejusites will contribute to something bigger than themselves.</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <p>We are highly committed to diversity. At Gramthejus diversity is inclusion, acceptance, honoring differences, and respecting others. Because we have LGBT+ ownership we focus on developing practices to include more minorities, LGBT+ and women in the workforce. We continually focus on developing new strategies and partnerships to help recruit a larger and deeper pool of diverse candidates for our clients.
 
-    colorPicker.addEventListener('change', function() {
-      const selectedColor = this.value;
-      navbar.style.backgroundColor = selectedColor;
-    });
-  </script>
+                Our commitment to supporting clients is based on four pillars at the heart of Gramthejus business practices: transparency, prioritizing customer needs, workplace diversity, and respecting customer information. These are our ethics. They are followed as business objectives and fundamentals; they have become the DNA of our organization. Our goal is for all Gramthejus customers, consultants, and employees to be proud to be associated with us because we are ethical in our overall business operations.</p>
+        </div>
+        <div class="col-md-6">
+            <div class="responsive-video">
+                <iframe src="https://www.youtube.com/embed/mZXetb1TPEg" frameborder="0" allowfullscreen></iframe>
+                
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
