--- a/HTML/Counter/index.html
+++ b/HTML/Counter/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -49,4 +49,31 @@ function changeCounter(but){
     }
     counter.innerText=count;
 }
+</script> -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Counter</title>
+</head>
+<body>
+    <div class="container">
+        <h1>Counter App</h1>
+        <span class="count">0</span>
+        <div class="btns">
+        <button id="inc" onClick="changeCounter(Inc)">Increase</button>
+        <button id="dec" onClick="changeCounter(Dec)">Decrease</button>
+        <button id="res" onClick="changeCounter(res)">Reset</button>
+    </div>
+    </div>
+</body>
+</html>
+<script>
+    let count=0;
+    function changeCounter()=>{
+        
+    }
+
 </script>
