--- a/HTML/Counter/index.html
+++ b/HTML/Counter/index.html
@@ -1,55 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counter</title>
-    <style>
-        .container{
-            /* display:flex; */
-            margin:auto;
-            text-align: center;
-        }
-        .counter{
-            font-size: 60px;
-            color:blue;
-            margin: 10px 0px;
-        }
-
-    </style>
-</head>
-<body>
-    <div class="container">
-    <h1>Counter</h1>
-    <span class="counter">0</span>
-    <div class="btn-container">
-        <button id="inc" onClick="changeCounter(inc)">INCREASE</button>
-        <button id="dec" onClick="changeCounter(dec)">DECREASE</button>
-        <button id="reset" onClick="changeCounter(reset)">RESET</button>
-    </div>
-   
-</div>
-</body>
-</html>
-<script >
-let counter=document.querySelector('.counter')
-let count=0;
-function changeCounter(but){
-    if(but==inc){
-        count+=1;
-    }
-    else if(but==dec){
-        if(count>0){
-            count=count-1;
-        }   
-    }
-    else if(but==reset){
-        count=0;
-    }
-    counter.innerText=count;
-}
-</script> -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -59,21 +7,34 @@ function changeCounter(but){
     <title>Counter</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Counter App</h1>
-        <span class="count">0</span>
-        <div class="btns">
-        <button id="inc" onClick="changeCounter(Inc)">Increase</button>
-        <button id="dec" onClick="changeCounter(Dec)">Decrease</button>
-        <button id="res" onClick="changeCounter(res)">Reset</button>
+ 
+<div class="container">
+    <h1>Counter</h1>
+    <span class="counter">0</span>
+    <div class="btns">
+        <button id="inc" onClick="changeCounter(inc)">Increment</button>
+        <button id="dec" onClick="changeCounter(dec)">Decrement</button>
+        <button id="reset" onClick="changeCounter(reset)">Reset</button>
     </div>
-    </div>
+</div>
 </body>
 </html>
 <script>
+    let counter=document.querySelector('.counter')
     let count=0;
-    function changeCounter()=>{
-        
+    function changeCounter(val){
+        if(val==inc){
+            count+=1
+        }
+        else if(val==dec){
+            if(count>0){
+                count=count-1
+            }
+        }
+        else if(val==reset){
+            count=0;
+        }
+        counter.innerText=count;
     }
 
 </script>
