--- a/HTML/Counter/index.html
+++ b/HTML/Counter/index.html
@@ -1,40 +1,46 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Counter</title>
+    <style>
+        .container{
+            text-align: center;
+        }
+        .counter{
+            font-size: 40px;
+            color:blueviolet;
+        }
+    </style>
 </head>
 <body>
- 
-<div class="container">
-    <h1>Counter</h1>
-    <span class="counter">0</span>
-    <div class="btns">
-        <button id="inc" onClick="changeCounter(inc)">Increment</button>
-        <button id="dec" onClick="changeCounter(dec)">Decrement</button>
-        <button id="reset" onClick="changeCounter(reset)">Reset</button>
+    <div class="container">
+        <h1>Counter</h1>
+        <span class="counter">0</span>
+        <div class="btns">
+            <button id="inc" onClick="changeCounter(inc)">Increment</button>
+            <button id="dec" onClick="changeCounter(dec)">Decrement</button>
+            <button id="reset" onClick="changeCounter(reset)">Reset</button>
+        </div>
     </div>
-</div>
 </body>
 </html>
 <script>
     let counter=document.querySelector('.counter')
     let count=0;
-    function changeCounter(val){
-        if(val==inc){
-            count+=1
+    function changeCounter(value){
+        if(value==inc){
+            count=count+1
         }
-        else if(val==dec){
+        else if(value==dec){
             if(count>0){
                 count=count-1
             }
         }
-        else if(val==reset){
+        else if(value==reset){
             count=0;
         }
-        counter.innerText=count;
+        counter.innerHTML=count;
     }
-
 </script>
