--- a/HTML/Fetch/index.html
+++ b/HTML/Fetch/index.html
@@ -49,38 +49,48 @@
 <script>
     //Fetching data
     // https://fakestoreapi.com/products
-    const getData= async()=>{
+   
+
+    const getData = async() =>{
         try{
             let res=await fetch("https://fakestoreapi.com/products");
             let data=await res.json();
-            appendData(data)
+            appendData(data);
             console.log(data);
-        }
-        catch(err){
-            console.log(err);
+
+        }catch(err){
+console.log(err);
         }
     }
+
     getData();
-    let container=document.getElementById("container");
+    let container = document.getElementById("container");
     function appendData(data){
-        data.forEach(el=>{
-          let div= document.createElement("div")
-          div.setAttribute("id","main");
-          let img=document.createElement("img")
-          img.src=el.image
-          let p1=document.createElement("p")
-          p1.innerText=`Name- ${el.category}`
-          let p2=document.createElement("p")
-          p2.innerText=`Description- ${el.description}`
-          let p3=document.createElement("p")
-          p3.innerText=`Price- ${el.price}`
-          let p4=document.createElement("p")
-          p4.innerText=`Count- ${el.rating.count}`
-          let p5=document.createElement("p")
-          p5.innerText=`Rating- ${el.rating.rate}`
-          div.append(img,p1,p2,p3,p4,p5);
-          container.append(div)         
-        })
+data.forEach(el=>{
+    let div = document.createElement("div");
+    div.setAttribute("id","main" );
+
+    let img = document.createElement("img");
+    img.src=el.image
+
+    let p1 = document.createElement("p");
+    p1.innerText=`Name- ${el.category}`
+
+    let p2 = document.createElement("p");
+    p2.innerText=`Description- ${el.description}`
+    let p3 = document.createElement("p");
+    p3.innerText=`Price- ${el.price}`
+
+    let p4 = document.createElement("p");
+    p4.innerText=`Count- ${el.rating}`
+
+    let p5 = document.createElement("p");
+    p5.innerText=`Rating- ${el.rating}`
+
+    div.append(img,p1,p2,p3,p4,p5);
+    container.append(div);
+
+})
     }
 
 </script>
