--- a/HTML/ObjFetch/index.html
+++ b/HTML/ObjFetch/index.html
@@ -68,7 +68,7 @@
       strikedoffprice: 1799,
     }
     ]
-    const malePeople = data.people.filter(person => person.gender === "male");
+    const malePeople = data.filter(person => person.gender === "male");
 
 
     data.map(function(elem,index,arr){
